# rtype

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  FEAT_GRAPHIC_CHANGES.md  README.md  debug_ecs.cpp  index.html  test_client.cpp
client/: CMakeLists.txt  MenuApplication.cpp  main.cpp
client/components/: Animation.h  Components.h  ShieldVisual.h  SimpleShape.h  Sprite.h  Systems.h  animation.hpp  audio.cpp  audio.hpp  camera.cpp  camera.hpp  client.hpp  render.cpp  render.hpp
client/components/configs/: config.hpp  manager.hpp
client/components/gui/: MainMenu.cpp  MainMenu.hpp  MainMenuState.cpp  MainMenuState.hpp  PrivateServerLobbyState.cpp  PrivateServerLobbyState.hpp  PrivateServerState.cpp  PrivateServerState.hpp  PublicServerState.cpp  PublicServerState.hpp  State.hpp  StateManager.cpp  StateManager.hpp
client/components/systems/: CollisionSystem.h  EnemySystem.h  InputSystem.h  InputSystem.hpp  MovementSystem.h  ProjectileSystem.h  RenderSystem.h  RenderSystem.hpp  TimerSystem.h
client/include/: TestMode.hpp  network.h
client/include/application/: ApplicationManager.hpp  GameApp.hpp  GameApplication.hpp  MenuApplication.hpp
client/include/components/: animation.h  animation.hpp  audio.h  audio.hpp  camera.h  camera.hpp  client.h  client.hpp  input.h  input.hpp  render.h  render.hpp
client/include/gui/: Accessibility.h  AssetPaths.h  AudioFactory.h  CollisionSystems.h  ECSSystems.h  EntityFactories.h  FontManager.h  FontManager.hpp  GUIHelper.h  GUIHelper.hpp  GameState.h  GameState.hpp  GameStateECS.h.backup  GameState_MONOLITHIC.h.backup  HighscoreManager.h  HighscoresState.h  KeyToString.h  MainMenuState.h  MainMenuState.hpp  MusicManager.h  NetworkManager.h  NetworkManager.hpp  ParallaxSystem.h  PrivateServerLobbyState.h  PrivateServerLobbyState.hpp  PrivateServerState.h  PrivateServerState.hpp  PublicServerState.h  PublicServerState.hpp  SettingsConfig.h  SettingsState.h  SoundManager.h  State.h  State.hpp  StateManager.h  StateManager.hpp  TextureCache.h  VesselSelectionState.h
client/include/network/: network.h  senders.h
client/lib/: CMakeLists.txt
client/lib/audio/: CMakeLists.txt
client/lib/graphics/: CMakeLists.txt
client/lib/input/: CMakeLists.txt
client/src/: TestMode.cpp  audio.cpp  camera.cpp  render.cpp
client/src/application/: ApplicationManager.cpp  GameApp.cpp  GameApplication.cpp  MenuApplication.cpp
client/src/gui/: Accessibility.cpp  AudioFactory.cpp  EntityFactory.cpp  FontManager.cpp  GUIHelper.cpp  GameLogicSystems.cpp  GameRenderer.cpp  GameState.cpp  HighscoreManager.cpp  HighscoresState.cpp  InputHandler.cpp  KeyToString.cpp  MainMenuState.cpp  MusicManager.cpp  NetworkManager.cpp  ParallaxSystem.cpp  PrivateServerLobbyState.cpp  PrivateServerState.cpp  PublicServerState.cpp  SettingsConfig.cpp  SettingsState.cpp  SoundManager.cpp  StateManager.cpp  TextureCache.cpp  VesselSelectionState.cpp
client/src/network/: network.cpp  senders.cpp
common/: CMakeLists.txt
common/components/: Bounce.h  ChainLightning.h  ChargedShot.h  Collision.h  Collision.hpp  Components.h  Components.hpp  EnemyAI.hpp  EnemyType.h  Explosion.h  FireRate.h  ForgeAugment.h  Health.h  Health.hpp  Homing.h  Input.h  Input.hpp  Lifetime.h  Lifetime.hpp  Player.h  Player.hpp  Position.cpp  Position.h  Position.hpp  PowerUp.h  PowerUp.hpp  Projectile.h  Projectile.hpp  Score.h  Score.hpp  Shield.h  Team.h  Team.hpp  Transform.h  Transform.hpp  TurretLink.h  Velocity.cpp  Velocity.h  Velocity.hpp  VesselClass.h
common/core/: Entity.hpp  EntityType.h  Event.hpp  Hitbox.hpp  System.h  System.hpp  Timer.h  Timer.hpp
common/examples/: GameStateECSExample.cpp
common/network/: MessageType.hpp  Packet.h  Packet.hpp  Protocol.h  Protocol.hpp
common/packets/: packets.h
common/systems/: ChargedShotSystem.h  CleanupSystem.h  CollisionSystem.h  EnemyAISystem.h  EnemySpawnSystem.h  FireRateSystem.h  FortressShieldSystem.h  HealthSystem.h  HomingSystem.h  MovementSystem.h  PlayerInputSystem.h  Systems.h
common/utils/: Config.hpp  EntityFactory.h  Logger.h  Logger.hpp  Random.hpp  bytes_printer.h  endiane_converter.h
docs/: BENCHMARK.md  (+18 more)
examples/: CMakeLists.txt  ecs_systems_example.cpp  mapparser_v2_example.cpp  packethandler_example.cpp
examples/mapparser_demo/: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
lib/ecs/: CMakeLists.txt  README.md
lib/ecs/src/: ComponentManager.cpp  Entity.cpp  EntityManager.cpp  SystemManager.cpp  World.cpp
lib/include/ECS/: ComponentManager.hpp  World.hpp
lib/mapparser/: CMakeLists.txt  README_V2.md
lib/mapparser/include/: mapparser.h
lib/mapparser/src/: mapparser.cpp
lib/packethandler/: CMakeLists.txt  README.md
lib/packethandler/include/: packethandler.h
lib/packethandler/src/: packethandler.cpp
lib/packetmanager/: CMakeLists.txt
lib/packetmanager/include/: packet.h  packetmanager.h
lib/packetmanager/src/: packetManager.cpp
lib/src/: ComponentManager.cpp  EntityManager.cpp
server/: CMakeLists.txt  main.cpp  network.h
server/components/: CollisionSystem.hpp  EnemyAI.hpp  EnemySpawner.hpp  GameRules.hpp  Physics.hpp
server/include/: network.h  rtype.h  senders.h  systems.h  tools.h
server/include/components/: Assistant.h  EnemyAI.h  LinkedRoom.h  LobbyState.h  NetworkAddress.h  PlayerConn.h  RoomProperties.h
server/include/controllers/: RoomController.h
server/include/services/: PlayerService.h  RoomService.h
server/include/systems/: AdminDetectorSystem.h  AssistantSystem.h  CollisionSystem.h  CollisionSystem.hpp  EnemyAISystem.h  EnemySpawner.h  EnemySpawner.hpp  GameRules.h  GameRules.hpp  PacketHandlingSystem.h  Physics.h  Physics.hpp  PlayerDisconnectSystem.h  RoomCleanSystem.h  ServerCollisionSystem.h  ServerEnemySystem.h  ServerEnemySystem.h.backup  ServerEntityCleanupSystem.h  ServerPlayerStateSystem.h
server/src/: main.cpp
server/systems/: CollisionSystem.hpp
tests/: CMakeLists.txt  test_basic.cpp  test_client.cpp  test_ecs.cpp  test_mapparser.cpp  test_packethandler.cpp  test_server.cpp
tests/packetmanager/: test_packetmanager.cpp
(+2112 files in other folders)
